--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
   
   <title>Frontend Mentor | Social links profile</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  
 </head>
 <body>
 
-  Jessica Randall
+  <section class="main">
+    <div class="card">
+      
+    </div>
+  </section>
+
+
+
+  <!-- Jessica Randall
   London, United Kingdom
   "Front-end developer and avid reader."
 
@@ -26,11 +30,8 @@
   Frontend Mentor
   LinkedIn
   Twitter
-  Instagram
+  Instagram -->
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  
 </body>
 </html>
