added content in card

--- a/index.html
+++ b/index.html
@@ -16,7 +16,19 @@
 
   <section class="main">
     <div class="card">
-      
+      <div class="pImage"></div>
+      <div class="info">
+        <h2 class="info-name">Jessica Randall</h2>
+        <div class="info-location">London, United Kingdom</div>
+        <div class="bio">"Front-end developer and avid reader."</div>
+      </div>
+      <div class="social-media">
+        <div class="button"><a href="">GitHub</a></div>
+        <div class="button"><a href="">Frontend Mentor</a></div>
+        <div class="button"><a href="">LinkedIn</a></div>
+        <div class="button"><a href="">Twitter</a></div>
+        <div class="button"><a href="">Instagram</a></div>
+      </div>
     </div>
   </section>
 
